# birthday_party

./: .gitignore  README.md  database.py  finalize.py  humanbytes.py  init_test_db.py  pyproject.toml  reset_db.py  server.py  slow_example_miner.py
.github/workflows/: test.yml
docs/: API.md
src/: database.py  server.py
src/birthday_party/: __init__.py  create_user.py  database.py  humanbytes.py  reset_db.py  server.py
src/birthday_party/cpu_md5/: finalize.py  mine.py
src/birthday_party/ocl_sha256/: finalize.py  hash_config.py  mine.py  optimize_params.py  sha256.cl  sha256.py
src/birthday_party/static/: browser_miner.html  miner.js  style.css
src/birthday_party/templates/: dashboard.html
src/birthday_party/wgpu_sha256/: __init__.py  finalize.py  mine.py  sha256.wgsl
static/: style.css
templates/: dashboard.html
tests/: conftest.py  test_server.py
