[project]
name = "birthday-party"
version = "0.1.0"
description = "A coordination server for distributed hash collision search via parallel pollard rho with distinguished points"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"
