[project]
name = "birthday_party"
version = "0.1.0"
description = "A coordination server for distributed hash collision search via parallel pollard rho with distinguished points"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.0",
    "jinja2>=3.1.0",
    "requests>=2.32.0",
    "pyopencl>=2024.1",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-aiohttp>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
